--- a/src/main/resources/templates/admin/user-create.html
+++ b/src/main/resources/templates/admin/user-create.html
@@ -21,7 +21,7 @@
         <label for="lastName">Last name: </label>
         <input type="text" th:field="*{lastName}" id="lastName" placeholder="last name" class="form-control mb-4 col-4">
         <label for="age">Age: </label>
-        <input type="number" th:field="*{age}" id="age" placeholder="username" class="form-control mb-4 col-4">
+        <input type="number" th:field="*{age}" id="age" placeholder="age" class="form-control mb-4 col-4">
         <label for="email">Email: </label>
         <input type="text" th:field="*{email}" id="email" placeholder="email" class="form-control mb-4 col-4">
         <label for="password">Password: </label>
